--- a/smartfarm_page/templates/str_smartfarm2.html
+++ b/smartfarm_page/templates/str_smartfarm2.html
@@ -17,6 +17,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
         <!-- Chartjs CSS CDN-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+        <!--Using JS-->
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <!-- Custom styles for this template-->
         <link href="{% static 'smartfarm_page/css/sb-admin-2.css' %}?after" rel="stylesheet" />
         <link href="{% static 'smartfarm_page/css/styles.css' %}?after" rel="stylesheet" />
@@ -40,43 +42,41 @@
                 <div class="img-fluid" style="height:350px; opacity: 0.6; background-repeat: no-repeat; background-image: url('../static/smartfarm_page/assets/img/str_bg.png');"></div>
                 <div class="row gx-lg-5">
                     <h2 class="text-center">이번 주 딸기 생산량 예측 결과</h2>
-                    <div class="row gx-lg-5">
-                        <h2 class="text-center" style="color: MediumBlue"> {{ predict_result }} </h2> <h5 class="text-center"> (개/단위 면적)</h5>
-                    </div>
+                    <h2 class="text-center" style="color: MediumBlue"> {{ predict_result }} </h2> <h5 class="text-center"> (개/단위 면적)</h5>
                 </div>
 
                 <div class="row mb-5"></div>
                 <div class="row mb-5"></div>
-                <div class="row gx-lg-5">
+                <div class="row gx-rg-5">
                     <h3 class="text-center">우수농가 평균과 나의 농장 비교하기</h3>
                 <!-- inTemp_graph-->
-                <div class="row mb-5"></div>
-                <div class="card shadow mb-4">
-                    <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-primary">우수농가 평균 내부 온도</h6>
-                    </div>
-                    <div class="card-body ">
-                        <div class="chart-area">
-                            <canvas id="myAreaChart"></canvas>
+                <div class="col-sm-1"></div>
+                <div class="col-sm-10">
+                    <div class="card shadow mb-4">
+                        <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-primary">우수농가 평균 내부 온도</h6>
                         </div>
-                        <hr>
+                        <div class="card-body">
+                            <div class="chart-area">
+                                <canvas id="line1" width="1200" height="400"></canvas>
+                            </div>
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="card shadow mb-4">
+                        <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-primary">우수농가 평균 내부 습도</h6>
+                        </div>
+                        <div class="card-body">
+                            <div class="chart-area">
+                                <canvas id="line-chart" width="1200" height="400"></canvas>
+                            </div>
+                            <hr>
+                        </div>
                     </div>
                 </div>
-                <!-- inHum_graph-->
-                <div class="row mb-3"></div>
-                <div class="card shadow mb-4">
-                    <div class="card-header py-3">
-                        <h6 class="m-0 font-weight-bold text-primary">우수농가 평균 내부 습도</h6>
-                    </div>
-                    <div class="card-body">
-                        <div class="chart-area">
-                            <canvas id="myAreaChart2"></canvas>
-                        </div>
-                        <hr>
-                    </div>
-                </div>
-            </div>
 
+            <div class="row mb-5"></div>
             <div class="text-center"> 👇 더 많은 데이터가 필요하다면 이곳을 참고해주세요 👀
             <div class="row mb-3"></div>
             <input type="submit" class="btn btn-secondary col-4"  value="우수 농가 API 조회 명세서 다운로드">
@@ -139,8 +139,124 @@
 
         <!-- Page level plugins -->
         <script src="{% static 'smartfarm_page/js/Chart.min.js' %}"></script>
+                    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 
         <!-- Page level custom scripts -->
         <script src="{% static 'smartfarm_page/js/chart-area-demo.js' %}"></script>
+
+        <script>
+        // 차트를 그럴 영역을 dom요소로 가져온다.
+        var chartArea = document.getElementById('line1')
+        // 차트를 생성한다.
+        var myChart = new Chart(chartArea, {
+            // ①차트의 종류(String)
+            type: 'line',
+            // ②차트의 데이터(Object)
+            data: {
+                // ③x축에 들어갈 이름들(Array)
+                labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange','a','b','c','d','e','f'],
+                // ④실제 차트에 표시할 데이터들(Array), dataset객체들을 담고 있다.
+                datasets: [{
+                    // ⑤dataset의 이름(String)
+                    label: 'My Farm',
+                    // ⑥dataset값(Array)
+                    data: [2, 19, 3, 5, 2, 3,5,5,5,5,5,5],
+
+                    // ⑧dataset의 선 색(rgba값을 String으로 표현)
+                    borderColor: 'rgb(255, 99, 132)',
+                    fill : false,
+                    // ⑨dataset의 선 두께(Number)
+                    borderWidth: 3
+                },{
+                    // ⑤dataset의 이름(String)
+                    label: 'Best Farm',
+                    // ⑥dataset값(Array)
+                    data: [2, 2, 3, 5, 19, 17,5,4,2,10,15,5],
+                    // ⑧dataset의 선 색(rgba값을 String으로 표현)
+                    borderColor: 'rgb(0, 0, 0)',
+                    fill : false,
+                    // ⑨dataset의 선 두께(Number)
+                    borderWidth: 3
+                    }],
+            // ⑩차트의 설정(Object)
+            options: {
+            responsive : true,
+            maintainAspectRatio: false,
+            title : {
+            display : true,
+            text : 'Comparison of Temp diff Best farm and My farm'
+            },
+            scales: {
+              xAxes: [{
+                display: true,
+                scaleLabel:{
+                    display : true
+                },
+                ticks: {
+                  maxTicksLimit: 7
+                }
+              }],
+              yAxes: [{
+                display : true,
+                ticks: {
+                  maxTicksLimit: 5,
+                  padding: 10,
+                  // Include a dollar sign in the ticks
+                  callback: function(value, index, values) {
+                    return '$' + number_format(value);
+                  }
+                },
+                scaleLabel:{
+                    display: true,
+                },
+                gridLines: {
+                  color: "rgb(0, 0, 0)",
+                  zeroLineColor: "rgb(0, 0, 0)",
+                  drawBorder: false,
+                  borderDash: [2],
+                  zeroLineBorderDash: [2]
+                }
+              }],
+            },
+
+            tooltips: {
+              backgroundColor: "rgb(255,255,255)",
+              bodyFontColor: "#858796",
+              titleMarginBottom: 10,
+            }
+          }
+          }
+
+        });
+
+
+
+
+
+new Chart(document.getElementById("line-chart"), {
+  type: 'line',
+  data: {
+    labels: [1500,1600,1700,1750,1800,1850,1900,1950,1999,2050],
+    datasets: [{
+        data: [86,114,106,106,107,111,133,221,783,2478],
+        label: "Africa",
+        borderColor: "#3e95cd",
+        fill: false
+      }, {
+        data: [6,3,2,2,7,26,82,172,312,433],
+        label: "North America",
+        borderColor: "#c45850",
+        fill: false
+      }
+    ]
+  },
+  options: {
+    title: {
+      display: true,
+    }
+  }
+});
+
+        </script>
     </body>
 </html>
